--- a/index.html
+++ b/index.html
@@ -4,34 +4,60 @@
   <meta charset="UTF-8">
   <title>Minecraft Command Book</title>
   <style>
-    body { font-family: Arial; margin: 20px; }
-    h1 { color: green; }
-    textarea { width: 100%; height: 300px; margin-top: 10px; }
-    button { margin-top: 10px; padding: 5px 10px; }
-    .section { margin-bottom: 20px; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 20px;
+    }
+
+    h1 {
+      color: #2e7d32;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+
+    textarea {
+      width: 100%;
+      height: 300px;
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-family: monospace;
+      font-size: 14px;
+      resize: none;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #2e7d32;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background-color: #1b5e20;
+    }
   </style>
 </head>
 <body>
-  <h1>Minecraft Command Book</h1>
+  <div class="container">
+    <h1>Minecraft Command Book</h1>
+    <p>คัดลอกคำสั่งทั้งหมดไปใช้ในเกม Minecraft โดยกดปุ่มด้านล่าง</p>
 
-  <div class="section">
-    <h2>1. รายการคำสั่งทั้งหมด</h2>
-    <textarea id="commandBox"></textarea><br>
-    <button onclick="downloadCommands()">ดาวน์โหลดคำสั่งเป็น TXT</button>
-  </div>
-
-  <div class="section">
-    <h2>2. คำสั่งสร้าง Book & Quill พร้อมคำสั่งทั้งหมด</h2>
-    <textarea id="bookCommandBox"></textarea><br>
-    <button onclick="copyBookCommand()">Copy คำสั่งไปใช้ในเกม</button>
-  </div>
-
-  <div class="section">
-    <h2>วิธีใช้</h2>
-    <ol>
-      <li>คัดลอกคำสั่งจากช่องบนสุดเพื่อนำไปใช้ทีละคำสั่งใน Minecraft แชท (กด T)</li>
-      <li>หรือคัดลอกคำสั่ง Book & Quill (ช่องล่าง) แล้ววางในแชท Minecraft เพื่อรับหนังสือพร้อมคำสั่งทั้งหมด</li>
-    </ol>
+    <textarea id="commandBox" readonly></textarea><br>
+    <button onclick="copyCommands()">Copy All Commands</button>
   </div>
 
   <script>
@@ -50,35 +76,5 @@
       "/tp", "/trigger", "/weather", "/whitelist", "/worldborder"
     ];
 
-    // แสดงคำสั่งทั้งหมด
-    document.getElementById('commandBox').value = commands.join('\n');
-
-    // สร้างคำสั่ง give book
-    const pages = commands.map(cmd => `"${cmd}"`);
-    const bookCommand = `/give @p minecraft:written_book{pages:[${pages.join(',')}],title:"Command Book",author:"Web"} 1`;
-    document.getElementById('bookCommandBox').value = bookCommand;
-
-    // ดาวน์โหลดคำสั่งเป็น TXT
-    function downloadCommands(){
-      const box = document.getElementById('commandBox');
-      const blob = new Blob([box.value], { type: 'text/plain' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'minecraft_commands.txt';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-      URL.revokeObjectURL(url);
-    }
-
-    // Copy คำสั่ง Book & Quill
-    function copyBookCommand(){
-      const box = document.getElementById('bookCommandBox');
-      box.select();
-      document.execCommand('copy');
-      alert('คัดลอกคำสั่ง Book & Quill ไปแล้ว! นำไปวางใน Minecraft แชท');
-    }
-  </script>
-</body>
-</html>
+    // แสดงคำสั่งใน textarea
+    const commandBox = document.getElementBy
